--- a/brazil-elections/package.json
+++ b/brazil-elections/package.json
@@ -1,5 +1,6 @@
 {
   "name": "brazil-elections",
+  "homepage": "https://betafcc.github.io/brazil-elections",
   "version": "0.1.0",
   "dependencies": {
     "d3-geo": "^1.9.0",
@@ -14,6 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
