--- a/brazil-elections/package.json
+++ b/brazil-elections/package.json
@@ -13,11 +13,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
-
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
